<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Inicio"
    tools:visibility="visible">

    <Button
        android:id="@+id/startVote"
        android:layout_width="179dp"
        android:layout_height="65dp"
        android:layout_marginBottom="48dp"
        android:text="@string/startTextButtonVote"
        app:layout_constraintBottom_toTopOf="@+id/startCreateVote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/startCreateVote"
        android:layout_width="179dp"
        android:layout_height="65dp"
        android:layout_marginBottom="152dp"
        android:text="@string/startTextButtonCreateVote"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/startButtonMyUser"
        android:layout_width="179dp"
        android:layout_height="65dp"
        android:layout_marginBottom="48dp"
        android:text="@string/startTextButtonMyUser"
        app:layout_constraintBottom_toTopOf="@+id/startVote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/startButtonUsersAdmin"
        android:layout_width="179dp"
        android:layout_height="65dp"
        android:layout_marginBottom="48dp"
        android:text="@string/startTextButtonUsersAdmin"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/startButtonMyUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="invisible" />

    <Button
        android:id="@+id/startButtonExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/startTextButtonExit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.946"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>